<resources>
    <string name="app_name">Shopial</string>
    <string name="app_legend">Shoping Social</string>
    <string name="url_con">http://shopial.dev</string>
    <string name="url_test">http://192.168.1.7:80</string>
    <string name="url_instagram">https://api.instagram.com/v1</string>

    <!-- Keys de instagram -->
    <string name="client_id">0e430cc90dff43c384bfdf24625cc9df</string>
    <string name="client_secret">6c62cc4bb68f443fa9e5ffcc26195bbd</string>
    <string name="redirect_uri">oauth://ASNE</string>
    <string name="instagram">instagram</string>

    <!-- Keys de twitter -->
    <string name="api_key_twitter">etidJ5WKRULkWXgJXnrXjCJ73</string>
    <string name="api_secret_twitter">1uoiVbqNRVzieTTVbDtQTSERxts59g9fOAlycYY0XKc6O2UojI</string>
    <string name="owner_id">399692079</string>
    <string name="access_token_twitter">399692079-sr26pkUeWlPNTKUy098Im9nNKJaJJR6uB7P3bUXh</string>
    <string name="access_token_secret">UXFLkDfL0HDyfD9mwJnP0mt7lMbdwUnc699DWAjmlADyq</string>
    <string name="twitter">twitter</string>

    <!-- Links social network -->
    <string name="instagram_link">Instagram</string>
    <string name="facebook_link">Facebook</string>
    <string name="google_link">Google +</string>
    <string name="twitter_link">Twitter</string>
    <string name="pinterest_link">Pinterest</string>

    <!-- Keys de facebook -->
    <string name="facebook_app_id">201541666866103</string>
    <string name="app_secret">f671ed6b0b3d15d48cef5212bf576eef</string>
    <string name="facebook">facebook</string>
    <string name="url_facebook">https://graph.facebook.com</string>

    <!-- Keys de google -->
    <string name="google_app_id">1021408244443-m7tmuo9h2896o1tc6p7v4utrlu0ecd6s.apps.googleusercontent.com</string>
    <string name="client_secret_google">f671ed6b0b3d15d48cef5212bf576eef</string>
    <string name="google">google</string>

    <!-- Keys de pinterest -->
    <string name="pinterest_app_id">4820404777215082521</string>
    <string name="client_secret_pinterest">98e07f0ec30f042b5c7f21b4e99375de8d69fd0aac082fad37454c39bad216af</string>
    <string name="pinterest">pinterest</string>
    <string name="access_token_pinterest">AR7eWREar_N7xM9sgVE_yfxiYcUxFDbRgWiRkUxC5fRrhGBA2QAAAAA</string>
    <string name="url_base_pinterest">https://api.pinterest.com/v1</string>

    <!-- etiquetas de fragment -->
    <string name="lbl_social_instagram">Register with Instagram</string>
    <string name="lbl_social_facebook">Register with Facebook</string>
    <string name="lbl_social_google">Register with Google</string>

    <!-- etiquetas de pantalla tipo usuario -->
    <string name="titulo_tipo_usuario">"To start, \n you want to do?"</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>

    <!-- Pantalla de login -->
    <string name="login">Log In</string>
    <string name="login_instagram">Log in with Instagram</string>
    <string name="social_login">Social Login</string>
    <string name="registrar">No account? <u>Register</u> in Shopial</string>
    <string name="aceptar">Accept</string>
    <string name="cancelar">Cancel</string>
    <string name="deny">Deny</string>
    <string name="leyenda_dialog_login">Enter your username and password to validate your login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="subtitulo_login">"Login using Instagram, \n Facebook or Google"</string>

    <!-- Pantalla de registro -->
    <string name="registro">Register User</string>
    <string name="detalle_registro">Register your details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="opcion_registro">  Or  </string>
    <string name="about_you">About You</string>
    <string name="registrar_shopial">Register</string>
    <string name="registrar_instagram">Register with Instagram</string>

    <!-- Pantalla de link you store -->
    <string name="link_store">Link Your Store</string>
    <string name="skip">Skip</string>
    <string name="remember_links">Remember that you can add more links in settings</string>

    <!-- Pantalla de login social -->
    <string name="lbl_name_button_social_facebook">Login via Facebook</string>
    <string name="lbl_name_button_social_google">Login via Google</string>
    <string name="lbl_name_button_social_instagram">Login via Instagram</string>

    <!-- Mensajes de informacion, alerta y error -->
    <string name="inicio_sesion_1">Validating user…</string>
    <string name="mensaje_error">An error occurred during the process, try again later</string>
    <string name="alerta_conexion_1">Connection error</string>
    <string name="alerta_conexion_2">It could not detect an active Internet connection</string>
    <string name="alerta_campos_vacios">First you must fill in all fields</string>
    <string name="registrar_usuario">Registering user…</string>
    <string name="registrar_tienda">Registering store…</string>
    <string name="email_vacio">You must provide a valid mail</string>
    <string name="pass_vacia">You must provide a password of at least 6 characters</string>
    <string name="name_vacio">You must provide your name before advancing</string>
    <string name="username_vacio">You must provide a user</string>
    <string name="country_vacio">You must provide a valid country</string>
    <string name="state_vacio">You must provide a valid state</string>
    <string name="city_vacio">You must provide a valid city</string>
    <string name="country_error">The country is not entered in the database</string>
    <string name="state_error">The state is not entered in the database</string>
    <string name="city_error">The city is not entered in the database</string>
    <string name="return_back">Return without saving</string>
    <string name="unregister_user">This insurance unregister user?</string>
    <string name="yes">Yes</string>
    <string name="not">Not</string>
    <string name="error">Error</string>
    <string name="first_select">You must first select an option</string>
    <string name="categories_empty">You must select at least one product category</string>
    <string name="name_store_empty">You must add the name of your store</string>
    <string name="brief_description">You must give a brief description of their products</string>
    <string name="address_facebook">You must type the address of your facebook fan page</string>

    <!-- Pantalla de registro tienda -->
    <string name="registro_tienda">Register Store</string>
    <string name="about_you_store">About Your Store</string>
    <string name="example_store_name">Example: Mobile Store</string>
    <string name="example_website">Example: www.mystore.com</string>
    <string name="example_fan_page">Example: www.facebook.com/mystore</string>
    <string name="store_name">Store name</string>
    <string name="type_product">What kind of products do you sell?</string>
    <string name="choose_category">Choose a category</string>
    <string name="description_products">Brief description of the products it sells</string>
    <string name="long_business">How long are you in business?</string>
    <string name="physical_store">Do you have a physical store?</string>
    <string name="company_person">Are you a company or person?</string>
    <string name="employes">How many employees do you have?</string>
    <string name="manufacture_products">Do you manufacture your products?</string>
    <string name="online_store">Do you have an Online Store?</string>
    <string name="website">Website</string>
    <string name="fan_page">Has Facebook Fan Page?</string>
    <string name="select">Select an option</string>
    <string name="select_social">Choose your favorite social\nnetwork to login</string>
    <string name="next">Next</string>
    <string name="continuar">Register and continue</string>
    <string name="title_activity_tienda_registro">TiendaRegistro</string>
    <string name="title_activity_registro_usuario">RegistroUsuario</string>
    <string name="no_data">Without registration</string>

    <!-- Pantalla de fotos y video -->
    <string name="you_photo">Select Your Photo</string>
    <string name="you_photo_store">Stock your store</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_media_content">Media</string>
    <string name="crop_continue">Crop and continue</string>
    <string name="description_crop">Crop your picture to continue</string>

    <!-- Pantalla de fragment profile -->
    <string name="fragment_profile">Profile</string>
    <string name="description_profile">Description</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="likes">Likes</string>
    <string name="posts">Posts</string>
    <string name="shopping">Shopping</string>
    <string name="gift_list">Gift List</string>
    <string name="favorites_list">Favorites List</string>
    <string name="get_data">Get data profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="load_data_start">Loading data</string>
    <string name="title_activity_link_network">LinkNetwork</string>
    <string name="title_activity_principal_menu">PrincipalMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
