<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lbl_dialog_login"
        android:padding="20dp"
        android:text="@string/select"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="sans"
        android:textStyle="bold" />
    <View
        android:background="#55404045"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/contenedor_body_dialog"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkbox_base_dialog"
            android:visibility="gone"
            android:text="@string/employes"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radio_base_dialog"
            android:visibility="gone"
            android:text="@string/address"
            android:textSize="20sp"
            android:textColor="@color/primary_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/but_accept_dialog"
            android:text="@string/accept"
            android:textColor="@color/title_text"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:elevation="8dp"
            android:background="@drawable/border_button_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>